--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -36,15 +36,15 @@ jobs:
         id: detect-package-manager
         run: |
           if [ -f "${{ github.workspace }}/yarn.lock" ]; then
-            echo "::set-output name=manager::yarn"
-            echo "::set-output name=command::install"
-            echo "::set-output name=runner::yarn"
-            exit 0
+          echo "manager=yarn" >> $GITHUB_STATE
+          echo "command=install" >> $GITHUB_STATE
+          echo "runner=yarn" >> $GITHUB_STATE
+          exit 0
           elif [ -f "${{ github.workspace }}/package.json" ]; then
-            echo "::set-output name=manager::npm"
-            echo "::set-output name=command::ci"
-            echo "::set-output name=runner::npx --no-install"
-            exit 0
+              echo "manager=npm" >> $GITHUB_STATE
+              echo "command=ci" >> $GITHUB_STATE
+              echo "runner=npx --no-install" >> $GITHUB_STATE
+              exit 0
           else
             echo "Unable to determine packager manager"
             exit 1
